argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  # annotations:
    # networking.gke.io/v1beta1.FrontendConfig: argocd-frontend-config
spec:
  # tls:
  #   - secretName: secret-example-com
  rules:
    - host: argocd.gmarousi.com
      http:
        paths:
        - pathType: ImplementationSpecific
          path: "/*"   # "*" is needed. Without this, the UI Javascript and CSS will not load properly
          backend:
            service:
              name: argocd-server
              port:
                number: 80
